--- a/ch05/myLocation.html
+++ b/ch05/myLocation.html
@@ -10,5 +10,8 @@
         <div id="location">
             Your location will go here.
         </div>
+        <div id="distance">
+            Distance from Sadang Station will go here.
+        </div>
     </body>
 </html>
